# py_sprit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: _benchmark_instances.py  _shared.py  run_algorithm_customization_sample.py  run_basic_sample.py  run_capacity_vrp_sample.py  run_constraint_customization_sample.py  run_cvrp_vrpnc1_sample.py  run_heterogeneous_fleet_sample.py  run_shipment_vrp_sample.py  run_skills_vrp_sample.py  run_solomon_c101_sample.py  run_time_window_vrp_sample.py  run_visualization_sample.py
src/py_sprit/: __init__.py  bootstrap.py  runtime.py
src/py_sprit/application/: __init__.py  algorithm_execution.py  extension_contracts.py  problem_definition.py  solution_visualization.py
src/py_sprit/domain/: __init__.py  algorithm_execution.py  extension_contracts.py  problem_definition.py  shared.py  solution_visualization.py
src/py_sprit/infrastructure/: __init__.py  gateways.py
tests/: conftest.py  support.py
tests/acceptance/: test_uc_func_bf_001_01.py  test_uc_func_bf_001_02.py  test_uc_func_bf_001_03.py  test_uc_func_bf_002_01.py  test_uc_func_bf_002_02.py  test_uc_func_bf_002_03.py  test_uc_func_bf_003_01.py  test_uc_func_bf_003_02.py  test_uc_func_bf_003_03.py
tests/integration/: test_algorithm_execution_integration.py  test_examples.py  test_extension_contracts_integration.py  test_problem_definition_integration.py  test_solution_visualization_integration.py
tests/unit/: test_algorithm_execution_unit.py  test_extension_contracts_unit.py  test_problem_definition_unit.py  test_solution_visualization_unit.py
(+14 files in other folders)
